--- a/src/content/iframe.css
+++ b/src/content/iframe.css
@@ -1,4 +1,5 @@
 @import 'default.css';
+@import 'theme.css';
 
 /* ----- General ----- */
 :root {
@@ -27,7 +28,7 @@ article {
 /* ----- h1-h5 ----- */
 h2 {
   color: var(--header);
-  font-size: 2.2em;
+  font-size: 2.5em;
   border-bottom: 1px solid var(--border);
   font-weight: normal;
 }
@@ -37,7 +38,6 @@ h2:first-of-type {
 }
 
 h3 {
-  color: var(--nav-hover);
   font-size: 1.5em;
   font-weight: normal;
 }
@@ -169,7 +169,7 @@ mark {
 /* ----- About ----- */
 .about dt {
   background-color: unset;
-  color: var(--nav-hover);
+  color: var(--h3);
   font-weight: bold;
   margin-bottom: 0.2em;
   font-size: 1.1em;
@@ -201,11 +201,11 @@ nav {
 nav a {
   color: var(--color);
   padding: 0.5em 1em;
-  transition: 0.5s;
+  /* transition: 0.5s; */
 }
 
 nav a:hover {
-  color: var(--btn-bg);
+  background-color: var(--hover);
 }
 
 /* ----- /Navigation ----- */
