--- a/src/content/toggle-switch.css
+++ b/src/content/toggle-switch.css
@@ -1,9 +1,9 @@
 /* ----- Toggle Switch ----- */
 .toggle {
+  --toggle-dot: 12px;
   --toggle-dot-margin: 1px;
-  --toggle-h: 14px;
-  --toggle-w: calc((var(--toggle-h) + var(--toggle-dot-margin)) * 2);
-  --toggle-dot: calc(var(--toggle-h) - var(--toggle-dot-margin) * 2);
+  --toggle-h: calc(var(--toggle-dot) + var(--toggle-dot-margin) * 2);
+  --toggle-w: calc((var(--toggle-dot) + var(--toggle-dot-margin)) * 2);
   --toggle-trans: calc(var(--toggle-w) - var(--toggle-h));
 
   appearance: none;
@@ -37,5 +37,5 @@
 
 /* smaller toggle switch for patterns */
 .pattern-row .toggle {
-  --toggle-h: 12px;
+  --toggle-dot: 10px;
 }
